--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>hello world</title>
+    <title> trabajo de fisica  ,  ejercicio de energia</title>
 </head>
 <body>
 
+<H1> nose  como carajo funciona esto</H1>
 
 </body>
 </html>
