--- a/index.html
+++ b/index.html
@@ -5,8 +5,19 @@
     <title> trabajo de fisica  ,  ejercicio de energia</title>
 </head>
 <body>
+<img src=".idea/descarga.jpg ">
+<H1> FISICA 2 Energia</H1>
 
-<H1> nose  como carajo funciona esto</H1>
 
+<h2>se busca calcular un ejercicio clasico de fisica 2  </h2>
+<h3>para solucionar el ejercicio precione en elboton inciar.</h3>
+
+<div>
+    <input type="text" name = "nombre">
+    
+    <input type="text"  name=" altura">
+
+
+</div>
 </body>
 </html>
