parcial laboratorio de computacion 2

--- a/index.html
+++ b/index.html
@@ -1,23 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+<link rel="stylesheet" href="estilos.css" type="text/css">
+<header>
     <meta charset="UTF-8">
-    <title> trabajo de fisica  ,  ejercicio de energia</title>
-</head>
+    <title> Ejercicios de Fisica</title>
+    <img src="img/html/logo de la pagina.jpg">
+
+</header>
 <body>
-<img src=".idea/descarga.jpg ">
 <H1> FISICA 2 Energia</H1>
 
-
-<h2>se busca calcular un ejercicio clasico de fisica 2  </h2>
-<h3>para solucionar el ejercicio precione en elboton inciar.</h3>
-
 <div>
-    <input type="text" name = "nombre">
-    
-    <input type="text"  name=" altura">
-
 
 </div>
+<div class="wrap">
+    <div class="izquierda">
+    <h3 style="color: #000;">objetivos:</h3>
+        <ol>
+            <li>aprender a resolver problemas por energia</li>
+            <li>aprender a resolver problemas por dinamica</li>
+        </ol>
+    </div>
+
+
+
+
+
+    <div class="main">
+        <h2>Ejemplo:</h2>
+        <img src="Ejemplo%20del%20problema.png">
+        <p>para resolver este ejercicio se tomaron los ejes:</p>
+
+    </div>
+</div>
+
 </body>
 </html>
