--- a/index.html
+++ b/index.html
@@ -4,17 +4,15 @@
 <header>
     <meta charset="UTF-8">
     <title> Ejercicios de Fisica</title>
-    <img src="img/html/logo de la pagina.jpg">
+
 
 </header>
 <body>
-<H1> FISICA 2 Energia</H1>
+ <H1><img src="logo%20de%20la%20pagina.jpg"> FISICA II: Energia</H1>
 
-<div>
-
-</div>
 <div class="wrap">
     <div class="izquierda">
+
     <h3 style="color: #000;">objetivos:</h3>
         <ol>
             <li>aprender a resolver problemas por energia</li>
@@ -28,9 +26,40 @@
 
     <div class="main">
         <h2>Ejemplo:</h2>
+        <P>un bloque de 10[kg] se libera desde el punto A. La pista tiene una friccion.
+        el bloque viaja por la pista , golpea a un resorte con 220[N/m] de constante de fuerza y
+            comprime el resorte 0.300[m] desde s posicion de equilibrio antes de llegar al reposo momentaneamente.
+            Determine el coeficiente de friccion cinetica entre el bloque y la superficie rugosa</p>
         <img src="Ejemplo%20del%20problema.png">
-        <p>para resolver este ejercicio se tomaron los ejes:</p>
+        
+            <h3>Solucion:</h3>
+        <p>
+            <img src="resolucion.png">
+        </p>
+    </div>
+</div>
 
+
+<div style="width: 100%">
+<p style="font-size: 150%"> Ahora , ya estas listo para resolver tu problema de energia</p>
+<h3>Suerte!!</h3>
+</div>
+<div class="resultado" >
+
+    <fieldset class="datos">
+        <legend><h3 style="color: #000">Datos</h3></legend>
+        <p><label>Energia potencial gravitatoria</label><input type="text"><input type="button" required value="" align="ju" ></p>
+        <p><label>Energia potencial elastica</label><input type="text"><input type="button" required value=""></p>
+        <p><label>Energia cinetica</label><input type="text"><input type="button" required value=""></p>
+        <p><label>altura</label> <input type="text"><input type="button" required value="m"></p>
+        <p><label>distancia</label><input type="text"><input type="button" required value="m"></p>
+        <p><label>rosamiento</label><input type="text"><input type="button" required value="N/m"></p>
+        <p><label>velocidad incial</label> <input type="text"><input type="button" required value="m/s2"></p>
+
+    </fieldset>
+
+    <div class="solucion">
+        <img src="resolucion.png">
     </div>
 </div>
 
