parcial laboratorio de computacion 2

--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 
 </header>
 <body>
- <H1><img src="logo%20de%20la%20pagina.jpg"> FISICA II: Energia</H1>
+<H1><img src="logo%20de%20la%20pagina.jpg"> FISICA II: Energia</H1>
 
 <div class="wrap">
     <div class="izquierda">
 
-    <h3 style="color: #000;">objetivos:</h3>
+        <h3 style="color: #000;">objetivos:</h3>
         <ol>
             <li>aprender a resolver problemas por energia</li>
             <li>aprender a resolver problemas por dinamica</li>
@@ -21,18 +21,15 @@
     </div>
 
 
-
-
-
     <div class="main">
         <h2>Ejemplo:</h2>
         <P>un bloque de 10[kg] se libera desde el punto A. La pista tiene una friccion.
-        el bloque viaja por la pista , golpea a un resorte con 220[N/m] de constante de fuerza y
+            el bloque viaja por la pista , golpea a un resorte con 220[N/m] de constante de fuerza y
             comprime el resorte 0.300[m] desde s posicion de equilibrio antes de llegar al reposo momentaneamente.
             Determine el coeficiente de friccion cinetica entre el bloque y la superficie rugosa</p>
         <img src="Ejemplo%20del%20problema.png">
-        
-            <h3>Solucion:</h3>
+
+        <h3>Solucion:</h3>
         <p>
             <img src="resolucion.png">
         </p>
@@ -41,20 +38,20 @@
 
 
 <div style="width: 100%">
-<p style="font-size: 150%"> Ahora , ya estas listo para resolver tu problema de energia</p>
-<h3>Suerte!!</h3>
+    <p style="font-size: 150%"> Ahora , ya estas listo para resolver tu problema de energia</p>
+    <h3>Suerte!!</h3>
 </div>
-<div class="resultado" >
+<div class="resultado">
 
     <fieldset class="datos">
         <legend><h3 style="color: #000">Datos</h3></legend>
-        <p><label>Energia potencial gravitatoria</label><input type="text"><input type="button" required value="" align="ju" ></p>
-        <p><label>Energia potencial elastica</label><input type="text"><input type="button" required value=""></p>
-        <p><label>Energia cinetica</label><input type="text"><input type="button" required value=""></p>
-        <p><label>altura</label> <input type="text"><input type="button" required value="m"></p>
-        <p><label>distancia</label><input type="text"><input type="button" required value="m"></p>
-        <p><label>rosamiento</label><input type="text"><input type="button" required value="N/m"></p>
-        <p><label>velocidad incial</label> <input type="text"><input type="button" required value="m/s2"></p>
+        <p><label>Energia potencial gravitatoria</label><span class="entrada"><input type="text"><input type="button" required value="" align="ju"></span></p>
+        <p><label>Energia potencial elastica</label><span class="entrada"><input type="text"><input type="button" required value=""></span></p>
+        <p><label>Energia cinetica</label> <span class="entrada"><input type="text"><input type="button" required value=""></span></p>
+        <p><label>altura</label>  <span class="entrada"><input type="text"><input type="button" required value="m"></span></p>
+        <p><label>distancia</label> <span class="entrada"><input type="text"><input type="button" required value="m"></span></p>
+        <p><label>rosamiento</label> <span class="entrada"><input type="text"><input type="button" required value="N/m"></span></p>
+        <p><label>velocidad incial</label> <span class="entrada"> <input type="text"><input type="button" required value="m/s2"></span></p>
 
     </fieldset>
 
