parcial laboratorio de computacion 2

--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
         <p><label>distancia</label> <span class="entrada"><input type="text"><input type="button" required value="m"></span></p>
         <p><label>rosamiento</label> <span class="entrada"><input type="text"><input type="button" required value="N/m"></span></p>
         <p><label>velocidad incial</label> <span class="entrada"> <input type="text"><input type="button" required value="m/s2"></span></p>
+        <p><label>masa</label>  <span class="entrada"><input type="text"><input type="button" required value="kg"></span></p>
 
     </fieldset>
 
