parcial laboratorio de computacion 2

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <h3 style="color: #000;">objetivos:</h3>
         <ol>
             <li>aprender a resolver problemas por energia</li>
-            <li>aprender a resolver problemas por dinamica</li>
+            <li>realizar los diagramas de cuerpo libre</li>
         </ol>
     </div>
 
